--- a/question4.html
+++ b/question4.html
@@ -10,11 +10,11 @@
 <body>
   <div class="container">
     <h1>Todo List</h1>
-    <form id="Task-form">
-      <input tpye="text" id="Task-input" placeholder="Add a new Task" required>
+    <form id="task-form">
+      <input tpye="text" id="task-input" placeholder="Add a new Task" required>
       <button type="submit">Add</button>
     </form>
-    <ul id="Task-list"></ul>
+    <ul id="task-list"></ul>
   </div>
   <script src="question4.js"></script>
 </body>
